--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-server</artifactId>
+      <version>1.19</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>ci-cd-sample</finalName>
