--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,40 @@
   </dependencies>
   <build>
     <finalName>ci-cd-sample</finalName>
+    <plugins>
+    <plugin>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>cobertura-maven-plugin</artifactId>
+      <version>2.7</version>
+      <configuration>
+        <check>
+          <branchRate>85</branchRate>
+          <lineRate>85</lineRate>
+          <haltOnFailure>true</haltOnFailure>
+          <totalBranchRate>85</totalBranchRate>
+          <totalLineRate>85</totalLineRate>
+          <packageLineRate>85</packageLineRate>
+          <packageBranchRate>85</packageBranchRate>
+        </check>
+      </configuration>
+      <executions>
+        <execution>
+          <goals>
+            <goal>clean</goal>
+            <goal>check</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
+    </plugins>
   </build>
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.7</version>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
