--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
       <artifactId>cobertura-maven-plugin</artifactId>
       <version>2.7</version>
       <configuration>
+          <formats>
+            <format>xml</format>
+          </formats>
         <check>
           <branchRate>85</branchRate>
           <lineRate>85</lineRate>
