--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,15 @@
   <build>
     <finalName>ci-cd-sample</finalName>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.3</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
     <plugin>
       <groupId>org.codehaus.mojo</groupId>
       <artifactId>cobertura-maven-plugin</artifactId>
@@ -45,10 +54,14 @@
         <execution>
           <goals>
             <goal>clean</goal>
-            <goal>check</goal>
           </goals>
         </execution>
       </executions>
+    </plugin>
+      <plugin>
+      <groupId>org.codehaus.sonar</groupId>
+      <artifactId>sonar</artifactId>
+      <version>5.1</version>
     </plugin>
     </plugins>
   </build>
